--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@splidejs/vue-splide": "^0.3.5",
     "core-js": "^3.6.5",
-    "vue": "^3.0.0"
+    "hooper": "^0.3.4",
+    "vue": "^3.0.0",
+    "vue-agile": "^1.1.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
