--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "core-js": "^3.6.5",
     "hooper": "^0.3.4",
     "vue": "^3.0.0",
-    "vue-agile": "^1.1.3"
+    "vue-agile": "^1.1.3",
+    "vue-infinite-slide-bar": "^1.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
